# selfhosted-pastebin

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  security.yml
cli/: paste
docs/: api.yaml
src/: crypto.py  database.py  main.py
templates/: index.html  view.html
tests/: test_api.py
