[project]
name = "selfhosted-pastebin"
version = "1.0.0"
description = "Encrypted paste service with client-side AES encryption"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Basel Mohamed"}]
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
